Removed extraction learning